# apps/api/src/app.module.ts
@@ -12,6 +12,7 @@ import { ProjectsModule } from './modules/projects/projects.module';
 import { ResourcesModule } from './modules/resources/resources.module';
 import { ServicesModule } from './modules/services/services.module';
 import { UsageModule } from './modules/usage.module';
+import { OrganizationsModule } from './modules/organizations/organizations.module';
 
 @Module({
   imports: [
@@ -26,6 +27,7 @@ import { UsageModule } from './modules/usage.module';
     IntegrationsModule,
     AdminModule,
     UsageModule,
+    OrganizationsModule,
   ],
   providers: [{ provide: APP_GUARD, useClass: RbacGuard }],
 })
