# apps/api/src/modules/organizations/organizations.module.ts
@@ -1,0 +1,9 @@
+import { Module } from '@nestjs/common';
+import { ControlPlaneModule } from '../../control-plane.module';
+import { OrganizationInviteAcceptanceController, OrganizationInvitesController } from './organizations.controller';
+
+@Module({
+  imports: [ControlPlaneModule],
+  controllers: [OrganizationInvitesController, OrganizationInviteAcceptanceController],
+})
+export class OrganizationsModule {}
